--- a/index.html
+++ b/index.html
@@ -38,15 +38,27 @@
     <img src="assets/banner.jpeg" alt="Banner">
 </div>
 
+<div class="titulo-beneficios">
+    <span>beneficios de las velas de sojas</span>
+</div>
+
+<div class="beneficios-box">
+    <p><span class="tick">✓</span> 🌱 100% naturales</p>
+    <p><span class="tick">✓</span> Son ecológicas y sostenibles</p>
+    <p><span class="tick">✓</span> Duran más que las de parafina</p>
+    <p><span class="tick">✓</span> No emiten toxinas ni humo negro</p>
+    <p><span class="tick">✓</span> Difunden mejor los aromas</p>
+</div>
+
 <!-- Sección de Información -->
 <div class="info-extra">
-    <div class="info-item">🚚 Envíos a todo el país</div>
-    <div class="info-item">💳 Formas de Pago: Transferencia y Efectivo</div>
-    <div class="info-item">📱 Contáctanos: <a href="https://wa.me/549541139">WhatsApp</a></div>
+    <div class="info-item">🤍 Envíos a todo el país</div>
+    <div class="info-item">🤍 Formas de Pago: Transferencia y Efectivo</div>
+    <div class="info-item">🤍 Contáctanos: <a href="https://wa.me/549541139">WhatsApp</a></div>
 </div>
 
 <footer>
-    <p>&copy; 2024 LUZ Y AROMA - Todos los derechos reservados.</p>
+    <p>&copy; 2025 LUZ Y AROMA - Todos los derechos reservados.</p>
 </footer>
 
 </body>
