--- a/public/carrito.html
+++ b/public/carrito.html
@@ -10,7 +10,7 @@
 
 <header>
     <div class="logo-container">
-        <img src="../assets/logo.png" alt="Logo">
+        <img src="../assets/logo.jpg" alt="Logo">
     </div>
     <nav>
         <ul>
@@ -46,7 +46,7 @@
 <script>mostrarCarrito();</script>
 
 <footer>
-    <p>&copy; 2024 LUZ Y AROMA - Todos los derechos reservados.</p>
+    <p>&copy; 2025 LUZ Y AROMA - Todos los derechos reservados.</p>
 </footer>
 
 </body>
