--- a/public/sobre-nosotros.html
+++ b/public/sobre-nosotros.html
@@ -10,7 +10,7 @@
 
 <header>
     <div class="logo-container">
-        <img src="../assets/logo.png" alt="Logo">
+        <img src="../assets/logo.jpg" alt="Logo">
     </div>
     <nav>
         <ul>
@@ -22,23 +22,21 @@
     </nav>
 </header>
 
-<h2 class="titulo-sobre-nosotros">Sobre Nosotros</h2>
-
-<div class="sobre-nosotros">
-    <div class="texto">
-        <p>En <strong>LUZ Y AROMA</strong>, creamos velas de soja con amor y dedicación. Cada una de nuestras velas está hecha a mano, con ingredientes naturales y fragancias cuidadosamente seleccionadas para llenar tu espacio de calma y bienestar. <br>
-
-            Creemos en el poder de la luz y los aromas para transformar momentos, acompañarte en tu rutina y brindarte un momento único de serenidad. Nuestro compromiso es ofrecerte productos sostenibles, de calidad y con un toque especial que haga de cada vela una experiencia única. <br>
-            
-            <p><strong>Gracias por iluminar tu vida con nosotros. ✨🕯️</strong></p>
+<div class="sobre-nosotros-container">
+    <div class="sobre-nosotros-box">
+        <h3>✨ Sobre Nosotros</h3>
+        <p>En <strong>LUZ Y AROMA</strong>, creamos velas de soja con amor y dedicación. Cada una de nuestras velas está hecha a mano, con ingredientes naturales y fragancias cuidadosamente seleccionadas para llenar tu espacio de calma y bienestar.</p>
+        <p>Creemos en el poder de la luz y los aromas para transformar momentos, acompañarte en tu rutina y brindarte un momento único de serenidad. Nuestro compromiso es ofrecerte productos sostenibles, de calidad y con un toque especial que haga de cada vela una experiencia única.</p>
+        <p><strong>Gracias por iluminar tu vida con nosotros. ✨🕯️</strong></p>
     </div>
-    <div class="imagen">
+
+    <div class="imagen-nosotros">
         <img src="../assets/sobre-nosotros.jpg" alt="Nuestra tienda">
     </div>
 </div>
 
 <footer>
-    <p>&copy; 2024 LUZ Y AROMA - Todos los derechos reservados.</p>
+    <p>&copy; 2025 LUZ Y AROMA - Todos los derechos reservados.</p>
 </footer>
 
 </body>
