--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
                     <li class="submenu-item">
                         <a href="#">Velas de Soja</a>
                         <ul class="submenu-content">
-                            <li><a href="public/productos.html">Velas en Frasco</a></li>
-                            <li><a href="public/productos.html">Velas Decorativas</a></li>
+                            <li><a href="public/productos.html#frasco">Velas en Frasco</a></li>
+                            <li><a href="public/productos.html#decorativas">Velas Decorativas</a></li>
                         </ul>
                     </li>
                 </ul>
@@ -33,7 +33,6 @@
     </nav>
 </header>
 
-<!-- Banner -->
 <div class="banner">
     <img src="assets/banner.jpeg" alt="Banner">
 </div>
@@ -50,11 +49,24 @@
     <p><span class="tick">✓</span> Difunden mejor los aromas</p>
 </div>
 
-<!-- Sección de Información -->
+<h2 class="titulo-beneficios">Destacados</h2>
+
+<div class="destacados">
+    <div class="destacado">
+        <img src="assets/destacado1.jpg" alt="Destacado 1">
+    </div>
+    <div class="destacado">
+        <img src="assets/destacado2.jpg" alt="Destacado 2">
+    </div>
+    <div class="destacado">
+        <img src="assets/destacado3.jpg" alt="Destacado 3">
+    </div>
+</div>
+
 <div class="info-extra">
     <div class="info-item">🤍 Envíos a todo el país</div>
     <div class="info-item">🤍 Formas de Pago: Transferencia y Efectivo</div>
-    <div class="info-item">🤍 Contáctanos: <a href="https://wa.me/549541139">WhatsApp</a></div>
+    <div class="info-item">🤍 Contáctanos: <a href="https://wa.me/549541139" target="_blank">WhatsApp</a></div>
 </div>
 
 <footer>
