--- a/public/carrito.html
+++ b/public/carrito.html
@@ -15,7 +15,18 @@
     <nav>
         <ul>
             <li><a href="../index.html">Inicio</a></li>
-            <li><a href="productos.html">Productos</a></li>
+            <li class="submenu">
+                <a href="#">Productos</a>
+                <ul class="submenu-content">
+                    <li class="submenu-item">
+                        <a href="#">Velas de Soja</a>
+                        <ul class="submenu-content">
+                            <li><a href="productos.html#frasco">Velas en Frasco</a></li>
+                            <li><a href="productos.html#decorativas">Velas Decorativas</a></li>
+                        </ul>
+                    </li>
+                </ul>
+            </li>
             <li><a href="carrito.html">Carrito</a></li>
             <li><a href="sobre-nosotros.html">Sobre Nosotros</a></li>
         </ul>
