--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     </div>
     <nav>
         <ul>
-            <li><a href="index.html">Inicio</a></li>
+            <li><a href="index.html" class="active">Inicio</a></li>
             <li class="submenu">
-                <a href="#">Productos</a>
+                <a href="public/productos.html" class="active">Productos</a> <!-- 👈 ahora es visible -->
                 <ul class="submenu-content">
                     <li class="submenu-item">
                         <a href="#">Velas de Soja</a>
