--- a/public/carrito.html
+++ b/public/carrito.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li class="submenu">
-                <a href="#">Productos</a>
+                <a href="productos.html" class="activo">Productos</a>
                 <ul class="submenu-content">
                     <li class="submenu-item">
                         <a href="#">Velas de Soja</a>
@@ -54,7 +54,9 @@
 <a href="productos.html">⬅️ Seguir Comprando</a>
 
 <script src="../js/carrito.js"></script>
-<script>mostrarCarrito();</script>
+<script>
+    mostrarCarrito();
+</script>
 
 <footer>
     <p>&copy; 2025 LUZ Y AROMA - Todos los derechos reservados.</p>
