--- a/public/sobre-nosotros.html
+++ b/public/sobre-nosotros.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="../index.html">Inicio</a></li>
             <li class="submenu">
-                <a href="#">Productos</a>
+                <a href="productos.html" class="active">Productos</a> <!-- 👈 visible -->
                 <ul class="submenu-content">
                     <li class="submenu-item">
                         <a href="#">Velas de Soja</a>
