--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <ul>
             <li><a href="index.html" class="active">Inicio</a></li>
             <li class="submenu">
-                <a href="public/productos.html" class="active">Productos</a> <!-- 👈 ahora es visible -->
+                <a href="public/productos.html" class="active">Productos</a>
                 <ul class="submenu-content">
                     <li class="submenu-item">
                         <a href="#">Velas de Soja</a>
